<resources>
    <string name="app_name">IntuitiveCats</string>
    <string name="action_settings">Settings</string>
    <string name="kilograms"> kilograms</string>
    <string name="years"> years</string>
    <string name="moreinfo">Description</string>
    <string name="i">More info</string>
    <string name="done">Done</string>
    <string name="breed_name">Breed Name</string>
    <string name="country">Country name</string>
    <string name="mood">Mood</string>
    <string name="start_now">start now</string>
    <string name="dscp_cat">Learn more about us so you can become a good Karen!</string>
</resources>