<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:orientation="vertical"
        tools:context=".breeds.ui.BreedDetailsFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            tools:background="@color/white">

            <ImageView
                android:id="@+id/catpic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@drawable/loadingcat" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/breed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breed_name"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:drawableLeft="@drawable/ic_baseline_location_on_24"
                    android:gravity="center_vertical"
                    android:text="@string/country"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_line_weight_24"
                    android:gravity="center_vertical"
                    android:text="@string/kilograms"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lifespan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_pets_24"
                    android:gravity="center_vertical"
                    android:text="@string/years"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moreinfo"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textExample"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMoreinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:backgroundTint="@color/purple_200"
                android:text="@string/i"
                android:textColor="@color/black"
                app:icon="@drawable/ic_baseline_info_24"
                app:iconTint="@color/black" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
